--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@slippi/slippi-js": "^5.1.1",
+    "d3": "^6.6.2",
     "next": "10.1.2",
+    "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/d3": "^6.3.0",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
