--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@slippi/slippi-js": "^5.1.1",
+    "@slippi/slippi-js": "^6.0.1",
     "@welldone-software/why-did-you-render": "^6.1.1",
     "d3": "^6.6.2",
     "next": "10.1.2",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
