--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.3.2"
+    "react-dropzone": "^11.3.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
