--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@slippi/slippi-js": "^6.0.1",
+    "@types/react-color": "^3.0.4",
     "@welldone-software/why-did-you-render": "^6.1.1",
     "d3": "^6.6.2",
     "next": "10.1.2",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0"
